added code link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
     <div class="parallax">
     </div>
+
+    <h1><a style="color: black;" href="https://github.com/conniepocky/River-Project">Code</a></h1>
 </body>
 
 </html>
