--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="parallax">
     </div>
 
-    <h1><a style="color: black;" href="https://github.com/conniepocky/River-Project">Code</a></h1>
+    <h1><a style="color: black;" href="https://github.com/conniepocky/River-Project">Click me for Code!</a></h1>
 </body>
 
 </html>
