--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@
         background-color: #70B0E8;
         font-size: 36px
     }
+
+    p {
+        margin: 25px;
+    }
 </style>
 <html>
 
@@ -35,13 +39,18 @@
 <body>
 
     <div class="jumbotron text-center" style="background-color: #70B0E8;">
-        <h1>About</h1>
+        <h1>About The River Nile</h1>
 
     </div>
 
-    <p>A river is fresh water flowing across the land. They start at a very high point in the mountains and end in the
-        sea. Every river has
-        three stages: upper course, middle course and lower course.
+    <p>
+        The river nile is in africa. It flows through lots of different countries. The countries it flows through is
+        Uganda, Ethiopia, Sudan, Burundi and Egypt. The mouth of the nile is the Mediterranean Sea and its source is a
+        lake in Burundi called Lake Victoria. The river nile was very important to the Ancient Egyptians because it
+        could not exist without the nile. In Egypt there is not much water so the nile was one of their only ways they
+        could recieve water. The rivers floods also helped growing crops, as well as that they used it to get fish and
+        other foods.
+
     </p>
 
 </body>
