--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
         <h1>Rivers</h1>
 
         <button onclick="openn()">Explore the nile</button>
-        <button onclick="openr()">Learn about rivers</button>
+        <button onclick="openr()">Learn about the nile</button>
     </div>
 
     <div class="parallax">
     </div>
 
-    <h1><a style="color: black;" href="https://github.com/conniepocky/River-Project">Click me for Code!</a></h1>
 </body>
 
 </html>
